fix: ride confirmation almost fixed but stucked on some details

--- a/src/features/Home/styles/rideConfirmation.module.scss
+++ b/src/features/Home/styles/rideConfirmation.module.scss
@@ -29,6 +29,7 @@
   height: 8px;
   background-color: #f8f9ff;
   width: 100%;
+  margin-top: 24px;
 }
 
 .trip {
